<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bisma.buswatch.BusTrackingFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_time_ETA_title"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>


    <!--Minute and Second values-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_time_ETA_minute_value"
            android:layout_gravity="center_horizontal"
            android:textSize="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_time_ETA_minute_value"
            android:layout_gravity="center_horizontal"
            android:textSize="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"/>

        </LinearLayout>

    <!--Minute and Second captions -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_text"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_text"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <!--Divider-->
    <View style="@style/Divider"></View>


    <!--From and To Bus Stop -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        >

        <!--From Bus Stop column -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_bus_stop"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>

        <!--To Bus Stop Column -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_bus_stop"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>






